FindBugs: avoin unnecessary instantiation of Integer object.
git-svn-id: svn://localhost/tmp/s2g/colossus.svn/trunk@3474 c5679a2a-0e0e-0410-bba2-8642b794b8c1